# ThreatFlow

./: .gitignore  LICENSE  README.md  pyproject.toml  threatflow.py
Main/: scrapy.py
Splunk2Hive/: pyproject.toml
Splunk2Hive/src/Tools/: scrapy.py
src/Main/: main.py
src/data/: windows_eventcode.csv
src/logs/: error_log.md
