[project]
name = "splunk2hive"
version = "0.1.0"
description = ""
authors = [
    {name = "kaykRodr1gu3s",email = "110197812+kaykRodr1gu3s@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "splunk-sdk (>=2.1.0,<3.0.0)",
    "thehive4py (==1.8.2)"
]

[tool.poetry]
packages = [{include = "splunk2hive", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
